per javadocs in Integer class, valueOf should be used in place of new Integer() to enable caching